# usort

./: .build.yml  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  Log.txt  Main.hs  README.md  Test.hs  Types.hs  USort.hs  UserCompare.hs  cabal.project  default.nix  nixpkgs.nix  package.nix  package.yaml  shell.nix  usort.cabal  usort.nix
app/: Main.hs
app-insort/: Main.hs
app-usort/: Main.hs
nix/: sources.json
nix/patches/: jsaddle.patch
src/: App.hs  Lib.hs  Lib2.hs  Merge.hs  Program.hs  Sort.hs  Sorted.hs  SplitItems.hs  Types.hs  USort.hs  UserCompare.hs
test/: Spec.hs  Test.hs
test/golden/: splitme.golden  splitme.txt
usort/: shell.nix  usort.cabal
usort-console/: TermboxUI.hs  shell.nix  usort-console.cabal
usort-console/app-usort/: Main.hs
usort-console/src/: App.hs  BrickCompare.hs  StdoutCompare.hs  TermboxCompare.hs  UserCompare.hs
usort-console/src/USort/: Console.hs
usort-lib/: shell.nix  usort-lib.cabal
usort-lib/app-usort/: Main.hs
usort-lib/src/: Compared.hs  Remember.hs  SplitItems.hs  USort.hs  UserCompare.hs
usort-lib/src/USort/: Compared.hs  SplitItems.hs
usort-lib/test/: Test.hs
usort-web/: CHANGELOG.md  Makefile  README.md  package-lock.json  package.json  shell.nix  usort-web.cabal
usort-web/client/: Main.hs
usort-web/src/lib/: usort.js
usort-web/src/routes/compare-view/: +page.svelte
usort-web/src/routes/edit-view/: +page.svelte
usort-web/src/routes/intro-splash/: +page.svelte
usort-web/templates/: compare-view.html  intro-splash.html
usort.it/: CHANGELOG.md  usort.it.cabal
usort/src/: USort.hs  UserCompare.hs
usort/test/: Test.hs
