name:                usort
version:             0.1.0.0
synopsis:            With usort, the sort is you!
description:         Please see README.md
homepage:            http://github.com/chreekat/usort#readme
license:             AGPL-3
license-file:        LICENSE.md
author:              Bryan Richter
maintainer:          b@chreekat.net
copyright:           Bryan Richter
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                       , text >= 1.2.2.0
                       , operational >= 0.2.3.2
                       , transformers >= 0.4.2.0
                       , mtl >= 2.2.1
                       , formatting >= 6.2.2
                       , haskeline >= 0.7.2.1
                       , semigroups >= 0.18.1
  default-language:    Haskell2010

executable usort-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , usort
  default-language:    Haskell2010

test-suite usort-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , usort
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chreekat/usort
