cabal-version: 2.4

name:           usort-console
version:        0.4.1.0
synopsis:       With usort, the sort is you!
description:
    Console-based version of usort, a tool for prioritization and brainstorming.
homepage:       http://github.com/chreekat/usort#readme
bug-reports:    https://github.com/chreekat/usort/issues
author:         Bryan Richter
maintainer:     b@chreekat.net
copyright:      Bryan Richter
license:        AGPL-3.0-or-later
license-file:   LICENSE.md
build-type:     Simple

source-repository head
  type: git
  location: https://git.sr.ht/~chreekat/usort

flag pedantic
  default: False
  description: Use -Wall -Werror
  manual: True

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7
    , brick
    , vty
    , formatting >= 6.3
    , usort-lib
    , text >= 1.2
    -- TODO: remove once brick (or termbox or vty lol) is  fully in use
    , termbox
    , haskeline >=0.7.2.1
  if flag(pedantic)
    ghc-options: -Werror -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

  exposed-modules:
      App
      UserCompare
      BrickCompare
  default-language: Haskell2010

executable insort
  main-is: Main.hs
  hs-source-dirs:
      app-insort
  build-depends:
      base
    , text
    , usort-console
    , usort-lib
  if flag(pedantic)
    ghc-options: -Werror -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-language: Haskell2010

executable usort
  if !impl(ghc)
    buildable: False
  main-is: Main.hs
  hs-source-dirs:
      app-usort
  build-depends:
      base
    , text
    , brick
    , usort-console
    , usort-lib
  if flag(pedantic)
    ghc-options: -Werror -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-language: Haskell2010
