cabal-version: 2.4

name:           usort-lib
version:        0.4.1.0
synopsis:       With usort, the sort is you!
homepage:       http://github.com/chreekat/usort#readme
bug-reports:    https://github.com/chreekat/usort/issues
author:         Bryan Richter
maintainer:     b@chreekat.net
copyright:      Bryan Richter
license:        AGPL-3.0-or-later
license-file:   LICENSE.md
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/chreekat/usort

flag pedantic
  default: False
  description: Use -Wall -Werror
  manual: True

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers ^>= 0.6
    , text ^>=1.2.2.0
    , pretty-simple >= 2.2.0.0
  if flag(pedantic)
    ghc-options: -Werror -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

  exposed-modules:
      USort
      SplitItems
      Compared
  default-language: Haskell2010

test-suite usort-test
  if !impl(ghc)
    buildable: False
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , usort-lib
    , bytestring
    , containers
    , QuickCheck
    , tasty
    , tasty-golden
    , tasty-hunit
    , tasty-quickcheck
    , text
  if flag(pedantic)
    ghc-options: -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
