cabal-version:       2.4

name:                usort-web
version:             0.1.0.0
synopsis: Client-side web app version of usort
-- description:
-- bug-reports:
license:             AGPL-3.0-or-later
license-file:        LICENSE.md
author:              Bryan Richter
maintainer:          b@chreekat.net
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

executable client
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base ^>=4.12.0.0,
    miso,
    usort
  hs-source-dirs:
    client,
    shared
  default-language:    Haskell2010
