cabal-version:       3.4

name:                usort-web
version:             0.1.0.0
synopsis: Client-side web app version of usort
-- description:
-- bug-reports:
license:             AGPL-3.0-or-later
license-file:        LICENSE.md
author:              Bryan Richter
maintainer:          b@chreekat.net
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

common js
  ghc-options: -ddisable-js-minifier

library
  import: js
  hs-source-dirs: hs-src

  exposed-modules: USort.Web
  js-sources: blop.js
  build-depends:
    , base ^>=4.12.0.0
    , usort-lib
    , text ^>= 2.0.2
  hs-source-dirs:
    hs-src
  default-language:    Haskell2010

executable usort-web
  import: js
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , usort-web
  hs-source-dirs:
    hs-app
  default-language:    Haskell2010
