cabal-version: 2.4

name:           usort
version:        0.4.1.0
synopsis:       With usort, the sort is you!
homepage:       http://github.com/chreekat/usort#readme
bug-reports:    https://github.com/chreekat/usort/issues
author:         Bryan Richter
maintainer:     b@chreekat.net
copyright:      Bryan Richter
license:        AGPL-3.0-or-later
license-file:   LICENSE.md
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/chreekat/usort

flag pedantic
  default: False
  description: Use -Wall -Werror
  manual: True

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers ^>= 0.6
    -- , formatting >=6.2.2
    , text >=1.2.2.0
    , pretty-simple ^>= 2.2.0.0
  if flag(pedantic)
    ghc-options: -Werror -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

  exposed-modules:
      App
      USort
      SplitItems
  default-language: Haskell2010

library usort-console
  if !impl(ghc)
    buildable: False
  hs-source-dirs:
    src
  build-depends:
      base
    , usort
    , haskeline >=0.7.2.1 && < 0.8
  exposed-modules:
      UserCompare

  default-language: Haskell2010

executable insort
  if !impl(ghc)
    buildable: False
  main-is: Main.hs
  hs-source-dirs:
      app-insort
  build-depends:
      base
    , text
    , usort
  if flag(pedantic)
    ghc-options: -Wall -Werror
  default-language: Haskell2010

executable usort
  if !impl(ghc)
    buildable: False
  main-is: Main.hs
  hs-source-dirs:
      app-usort
  build-depends:
      base
    , text
    , usort
    , usort-console
  if flag(pedantic)
    ghc-options: -Wall -Werror
  default-language: Haskell2010

test-suite usort-test
  if !impl(ghc)
    buildable: False
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , bytestring
    , containers
    , QuickCheck
    , tasty
    , tasty-golden
    , tasty-hunit
    , tasty-quickcheck
    , text
    , usort
  if flag(pedantic)
    ghc-options: -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
